<resources>
    <string name="app_name">Popular Movies</string>

    <string name="sort_by_popular">Most Popular</string>
    <string name="sort_by_rated">Top Rated</string>
    <string name="sort_by_favorite">Favorites</string>

    <string name="error_message">An error has occurred.</string>
    <string name="error_connection">No internet connection.</string>

    <string name="movie_original_title">Original Title</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_vote_average">Vote Average</string>
    <string name="movie_overview">Overview</string>
    <string name="movie_trailers">Trailers:</string>
    <string name="movie_reviews">Reviews:</string>

    <string name="trailer">Trailer</string>
    <string name="button_favorite">Mark As Favorite</string>
    <string name="button_unfavorite">Unfavorite</string>
    <string name="play_button">Play Button</string>

    <string name="content_authority">com.thayane.popularmovies.app</string>

    <string name="action_share">Share</string>

    <string name="retry_connection">Retry</string>
</resources>
