<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:fillViewport="true"
    >
    <LinearLayout
        android:id="@+id/ll_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="40sp"
            android:gravity="center_vertical"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:background="@color/backgroundTitleColor"/>
        <LinearLayout
            android:id="@+id/ll_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:layout_margin="@dimen/normal_padding">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingStart="6dp"
                android:scaleType="fitStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/normal_padding">


                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingBottom="@dimen/normal_padding"/>

                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:paddingBottom="@dimen/normal_padding"/>

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingBottom="@dimen/normal_padding"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mark_favorite_btn"
                    android:text="@string/button_favorite"
                    android:paddingBottom="@dimen/normal_padding"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_overview"
            android:padding="@dimen/normal_padding"
            android:visibility="invisible"
            android:layout_below="@+id/ll_basic_info">


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:textSize="16sp"
                android:paddingBottom="@dimen/normal_padding"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_trailers"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:paddingTop="@dimen/normal_padding"/>


            <android.support.v7.widget.RecyclerView
                android:paddingTop="@dimen/normal_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_trailers"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_reviews"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:paddingTop="@dimen/normal_padding"/>

            <android.support.v7.widget.RecyclerView
                android:paddingTop="@dimen/normal_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_reviews"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>
